[package]
name = "safebank"
version = "0.1.0"
edition = "2021"
authors = ["SafeBank Team"]
description = "A lightweight cybersecurity framework for rural digital banking"
license = "MIT"
repository = "https://github.com/pixelatedseraph/safebank"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
